Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #368632 Fix repeating date iCal export: show date only one time and add RRULE to export.
- #332273 Use field alias in iCal location and description fields to avoid problems with CCK table optimization.
- #328097 Fix some small problems found while researching this issue. The main fix was in the Date filter.
- Allow removal of displays, still no UI since they can't go on other views.
- Don't try to set date argument when another argument precedes it.
- #349409 Fix jcalendar popup.
- Add option to link calendar to content type, and add link to calendar to node, and link to node/add to calendar.
- #342119 Make sure calendar_type option is in expected format, maybe this was causing the translation problems?
- #343090 'Today' highlighting got lost in last round of theme changes, restore it.
- #340215 Make sure day and week time slots are checking >= instead of >.
- #327221 Don't add 'today' class in empty blocks.
- #341964 Get missing back/next links back in year view (needs fix in Date module, too).
- Fix some logic in stripe labels that was showing empty content type stripes and missing taxonomy stripes.

Version 2.0 rc6
=================

- All day events were getting dropped.
- #341202, #339457, #337952, #329128, #337787, #341203, Fix repeating and multiple date displays. 
- #303714 Make sure calendar obeys the date format chosen in the view now that the Date module has a 'time' format available.
- #340604 Seed taxonomy color stripes with #ffffff to be sure the colorpicker works right.
- #340215 Fix broken method of setting the key for start times.
- Get rid of hard-coded 'UTC' for database values in favor of consistently using date_get_timezone_db().
- Make sure parent pre_execute() function is called so things like items per page get set.